# taking_game

./: Cargo.toml  README
benches/: benchmark_evaluator.rs
src/: constructor.rs  impartial.rs  impls.rs  lib.rs  new.rs  symmetries.rs  util.rs
src/__bin/: benchmark_evaluator.rs  benchmark_generate_moves.rs
src/builder/: known_games.rs  mod.rs
src/dense/: constructor.rs  impartial.rs  mod.rs  new.rs  symmetries.rs  util.rs
src/hypergraph/: mod.rs  set.rs  structured_hypergraph.rs
src/sparse/: constructor.rs  impartial.rs  mod.rs  new.rs  symmetries.rs
src/taking_game/: impartial.rs  mod.rs  symmetries.rs
tests/: nimber.rs  tests.rs
